--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.2",
+    "if-env": "^1.0.4",
     "mongoose": "^5.6.10",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "serve": "^11.1.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
