--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.9.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.9.0",
+    "react-iframe": "^1.8.0",
     "react-media": "^1.9.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
