--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-session": "^1.16.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.10",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
